preventing tables from making the page way longer than necessary by adding scrollbars

--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -25,6 +25,13 @@ span.letter:after {
   content: " - ";
 }
 
+.right-size {
+  width:100%; 
+  max-height:35em; 
+  overflow: auto;
+  margin-bottom: 2em;  
+}
+
 .soon-available:after {
   content: " (bientôt/soon)";
   color: #a0a0a0;
